--- a/Public/index.html
+++ b/Public/index.html
@@ -8,9 +8,19 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 <body>
-    
- 
- 
+ <header class="bgHeader textColorHeader text-center p-4 display-5">
+    Arthur's Quizz
+
+
+ </header>
+ <h1>Je suis le titre de la page pour le quizz</h1>
+ <footer>
+    <section>
+        <div></div>
+    </section>
+
+
+ </footer> 
  <!--SCRIPT-->
     <script src="./js/main.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
