--- a/Public/index.html
+++ b/Public/index.html
@@ -15,12 +15,23 @@
  </header>
  <h1>Je suis le titre de la page pour le quizz</h1>
  <footer>
-    <section>
-        <div></div>
+    <section class="d-flex justify-content-around footerbg">
+      <div>
+        <h4>CONTACTEZ NOUS:</h4>
+        <ul><a class="h6" href="https://www.facebook.com/">Facebook</a></ul>
+        <ul><a class="h6" href="https://x.com/home">Twitter</a></ul>
+        <ul><a class="h6" href="https://www.instagram.com/">Instagram</a></ul>
+      </div>
+      <div>
+        <h4>INFOS:</h4>
+        <ul>10, place de la minoterie</ul>
+        <ul>Molenbeek 1080</ul>
+        <ul>arthurvanroost@mg.com</ul>
+      </div>
+      <hr>
     </section>
-
-
- </footer> 
+    <p class="text-center colorCR bgCR">Copyrights reserved</p>
+  </footer>
  <!--SCRIPT-->
     <script src="./js/main.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
