--- a/Public/index.html
+++ b/Public/index.html
@@ -7,9 +7,9 @@
     <link rel="stylesheet" href="./style/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
-<body>
+<body class="bodyBg">
  <header class="bgHeader textColorHeader text-center p-3 display-5">
-    Arthur's Quizz
+  <h1>Quizz One Piece</h1>
  </header>
 
  <h1>Je suis le titre de la page pour le quizz</h1>
