--- a/Public/index.html
+++ b/Public/index.html
@@ -1,10 +1,15 @@
+<!-- JAI TAFFE SUR UN AUTRE DOSSIER POUR LE PROJET POUR CA QUE MES COMMITS SONT DE L'IMPORT DE CHAQUE PAGE -->
+ <!-- JE RAJOUTE DES COMMENTAIRES LA OU JE PENSE QUE C'EST NECESSAIRE -->
+ 
+ 
+
 <!DOCTYPE html>
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quiz One Piece</title>
-    <link rel="stylesheet" href="./style1.css">
+    <link rel="stylesheet" href="./style/style.css">
 </head>
 <body>
     <div class="container">
@@ -29,6 +34,6 @@
         </footer>
     </div>
     
-    <script src="./main1.js"></script>
+    <script src="./js/main.js"></script>
 </body>
 </html>
